--- a/templates/common/form/input_text.html
+++ b/templates/common/form/input_text.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <div class="fr-input-group {% if form_input.errors %}fr-select-group--error{% endif %}">
     {% if label %}
         <label class="fr-label" for="{{form_input.id_for_label}}">
@@ -5,16 +7,122 @@
             {% include "common/mandatory_field.html" with form_input=form_input %}
         </label>
     {% endif %}
-    <input
-        class="fr-input {% if form_input.errors %}fr-input--error{% endif %}"
-        aria-describedby="text-input-error-desc-error"
-        type="text" id="{{form_input.id_for_label}}"
-        name="{{form_input.html_name}}"
-        value="{{ form_input.value|default_if_none:'' }}"
-        {% if not editable %}disabled{% endif %}>
+    <div
+        class="fr-mt-1w"
+        style="display: flex;flex-direction: row;align-items: center;justify-content: stretch;"
+        {% if 'programme__nom' not in comments %}
+            onmouseover="document.getElementById('{{form_input.id_for_label}}_comment').hidden=false"
+            onmouseleave="document.getElementById('{{form_input.id_for_label}}_comment').hidden=true"
+        {% endif %}
+    >
+        <input
+            class="fr-input {% if form_input.errors %}fr-input--error{% endif %}"
+            aria-describedby="text-input-error-desc-error"
+            type="text" id="{{form_input.id_for_label}}"
+            name="{{form_input.html_name}}"
+            value="{{ form_input.value|default_if_none:'' }}"
+            {% if not editable %}disabled{% endif %}>
+        <div id='{{form_input.id_for_label}}_comment' {% if 'programme__nom' not in comments %}hidden{% endif %}>
+            <img
+                title="{{comments.programme__nom}}"
+                id="{{form_input.id_for_label}}_comment-img"
+                data-fr-opened="false"
+                aria-controls="{{form_input.id_for_label}}_comment-dialog"
+                class="apilos-fi-btn fr-mx-1w"
+                style="cursor: pointer;width: 32px;height: 32px;stroke-width: 10px;stroke:red;"
+                src="{% static "icons/chat.svg" %}"
+            />
+        </div>
+    </div>
     {% for error in form_input.errors %}
         <p id="text-input-error-desc-error" class="fr-error-text">
             {{ error }}
         </p>
     {% endfor %}
 </div>
+{{form_input.name}}
+
+<dialog aria-labelledby="{{form_input.id_for_label}}_comment-title" id="{{form_input.id_for_label}}_comment-dialog" class="fr-modal" role="dialog" >
+    <div class="fr-container fr-container--fluid fr-container-md">
+        <div class="fr-grid-row fr-grid-row--center">
+            <div class="fr-col-12 fr-col-md-8 fr-col-lg-6">
+                <div class="fr-modal__body">
+                    <div class="fr-modal__header">
+                        <button type="button" class="fr-link--close fr-link" aria-controls="{{form_input.id_for_label}}_comment-dialog">Fermer</button>
+                    </div>
+                    <div class="fr-modal__content">
+                        {% if label %}
+                            <h1 id="{{form_input.id_for_label}}_comment-title" class="fr-modal__title">
+                                <span class="fr-fi-arrow-right-line fr-fi--lg"></span>
+                                {{ label }}
+                            </h1>
+                        {% endif %}
+                        <textarea
+                            class="fr-input"
+                            aria-describedby="text-input-error-desc-error"
+                            type="text"
+                            id="{{form_input.id_for_label}}_comment-textarea"
+                            name="{{form_input.html_name}}_comment-textarea"
+                            rows="5"></textarea>
+                    </div>
+                    <div class="fr-modal__footer">
+                        <ul class="fr-btns-group fr-btns-group--right fr-btns-group--inline-reverse fr-btns-group--inline-lg fr-btns-group--icon-left">
+                            <li>
+                                <button type="button" class="fr-btn fr-fi-checkbox-line"
+                                    onclick="send_comment('{{form_input.id_for_label}}_comment', 'programme', '{{form_input.name}}')">
+                                    Commenter
+                                </button>
+                            </li>
+                            <li>
+                                <button type="button" class="fr-btn fr-fi-checkbox-line fr-btn--secondary"
+                                    aria-controls="{{form_input.id_for_label}}_comment-dialog">
+                                    Annuler
+                                </button>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</dialog>
+<script>
+    function send_comment(input_id, object, field) {
+        comment = document.getElementById(input_id+ '-textarea').value
+        csrf_token = document.getElementsByName('csrfmiddlewaretoken')[0].value
+
+        // request = new Request('/comments/', {
+        //     headers: {
+        //         'X-CSRFToken': csrf_token,
+        //         'Content-Type': 'application/json'
+        //     },
+        //     method: 'POST',
+        //     body: JSON.stringify({comment: comment})
+        // });
+        // fetch(request).then( response => {console.log(response.status)})
+
+        fetch('/comments/', {
+            method: 'post',
+            headers: {
+                'X-CSRFToken': csrf_token,
+                'Accept': 'application/json',
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify({
+                comment: comment,
+                object : object,
+                field : field,
+                convention_uuid : '{{convention.uuid}}'
+            })
+        }).then(function(response) {
+            if (response.status == 200) {
+                return response.json();
+            }
+        }).then(res => console.log(res));
+
+
+
+        document.getElementById(input_id + '-img').setAttribute('data-fr-opened',false)
+    }
+
+</script>
