upload with only 1 click

--- a/templates/conventions/prets.html
+++ b/templates/conventions/prets.html
@@ -102,7 +102,7 @@
                                             {% include "common/mandatory_field.html" with form_input=form.annee_fin_conventionnement %}
                                             {% include "common/help_field.html" with form_input=form.annee_fin_conventionnement %}
                                         </label>
-                                        <div class="fixed-date fr-mt-1w">
+                                        <div class="block--row-strech fr-mt-1w">
                                             <div class="day-and-month">
                                                 <span>30&nbsp;/&nbsp;06&nbsp;/&nbsp;</span>
                                             </div>
