--- a/templates/common/form/input_text.html
+++ b/templates/common/form/input_text.html
@@ -7,31 +7,28 @@
             {% include "common/mandatory_field.html" with form_input=form_input %}
         </label>
     {% endif %}
-    <div
-        class="fr-mt-1w block--row-strech"
-        {% if object_field not in comments %}
-            onmouseover="document.getElementById('{{form_input.id_for_label}}_comment').hidden=false"
-            onmouseleave="document.getElementById('{{form_input.id_for_label}}_comment').hidden=true"
-        {% endif %}
-    >
+    <div class="fr-mt-1w block--row-strech" id="{{form_input.id_for_label}}_div">
         <input
             class="fr-input {% if form_input.errors %}fr-input--error{% endif %}"
             aria-describedby="text-input-error-desc-error"
-            type="text" id="{{form_input.id_for_label}}"
+            type="text"
+            id="{{form_input.id_for_label}}"
             name="{{form_input.html_name}}"
             value="{{ form_input.value|default_if_none:'' }}"
             {% if not editable %}disabled{% endif %}>
-        <div id='{{form_input.id_for_label}}_comment' {% if object_field not in comments %}hidden{% endif %}>
-            <div class="content__icons {% if object_field in comments %}content__icons--red{% else %}content__icons--blue{% endif %} fr-px-1w"
-                id="{{form_input.id_for_label}}_comment-img"
-                data-fr-opened="false"
-                aria-controls="{{form_input.id_for_label}}_comment-dialog">
-                <svg role="img" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" aria-labelledby="chatIconTitle">
-                    <title id="chatIconTitle">{% if object_field %}{{ comments|get_item:object_field }}{% endif %}</title>
-                    <path d="M8.82388455,18.5880577 L4,21 L4.65322944,16.4273939 C3.00629211,15.0013 2,13.0946628 2,11 C2,6.581722 6.4771525,3 12,3 C17.5228475,3 22,6.581722 22,11 C22,15.418278 17.5228475,19 12,19 C10.8897425,19 9.82174472,18.8552518 8.82388455,18.5880577 Z"></path>
-                </svg>
+        {% if object_field %}
+            <div id='{{form_input.id_for_label}}_comment' {% if object_field not in comments %}hidden{% endif %}>
+                <div class="content__icons {% if object_field in comments %}content__icons--red{% else %}content__icons--blue{% endif %} fr-px-1w"
+                    id="{{form_input.id_for_label}}_comment-img"
+                    data-fr-opened="false"
+                    aria-controls="{{form_input.id_for_label}}_comment-dialog">
+                    <svg role="img" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" aria-labelledby="chatIconTitle">
+                        <title id="chatIconTitle">{{ comments|get_item:object_field }}</title>
+                        <path d="M8.82388455,18.5880577 L4,21 L4.65322944,16.4273939 C3.00629211,15.0013 2,13.0946628 2,11 C2,6.581722 6.4771525,3 12,3 C17.5228475,3 22,6.581722 22,11 C22,15.418278 17.5228475,19 12,19 C10.8897425,19 9.82174472,18.8552518 8.82388455,18.5880577 Z"></path>
+                    </svg>
+                </div>
             </div>
-        </div>
+        {% endif %}
     </div>
     {% for error in form_input.errors %}
         <p id="text-input-error-desc-error" class="fr-error-text">
@@ -39,89 +36,91 @@
         </p>
     {% endfor %}
 </div>
-{{form_input.name}}
 
-<dialog aria-labelledby="{{form_input.id_for_label}}_comment-title" id="{{form_input.id_for_label}}_comment-dialog" class="fr-modal" role="dialog" >
-    <div class="fr-container fr-container--fluid fr-container-md">
-        <div class="fr-grid-row fr-grid-row--center">
-            <div class="fr-col-12 fr-col-md-8 fr-col-lg-6">
-                <div class="fr-modal__body">
-                    <div class="fr-modal__header">
-                        <button type="button" class="fr-link--close fr-link" aria-controls="{{form_input.id_for_label}}_comment-dialog">Fermer</button>
-                    </div>
-                    <div class="fr-modal__content">
-                        {% if label %}
-                            <h1 id="{{form_input.id_for_label}}_comment-title" class="fr-modal__title">
-                                <span class="fr-fi-arrow-right-line fr-fi--lg"></span>
-                                {{ label }}
-                            </h1>
-                        {% endif %}
-                        <textarea
-                            class="fr-input"
-                            aria-describedby="text-input-error-desc-error"
-                            type="text"
-                            id="{{form_input.id_for_label}}_comment-textarea"
-                            name="{{form_input.html_name}}_comment-textarea"
-                            rows="5"></textarea>
-                    </div>
-                    <div class="fr-modal__footer">
-                        <ul class="fr-btns-group fr-btns-group--right fr-btns-group--inline-reverse fr-btns-group--inline-lg fr-btns-group--icon-left">
-                            <li>
-                                <button type="button" class="fr-btn fr-fi-checkbox-line"
-                                    onclick="send_comment('{{form_input.id_for_label}}_comment', 'programme', '{{form_input.name}}')">
-                                    Commenter
-                                </button>
-                            </li>
-                            <li>
-                                <button type="button" class="fr-btn fr-fi-checkbox-line fr-btn--secondary"
-                                    aria-controls="{{form_input.id_for_label}}_comment-dialog">
-                                    Annuler
-                                </button>
-                            </li>
-                        </ul>
+{% if object_field %}
+    <dialog aria-labelledby="{{form_input.id_for_label}}_comment-title" id="{{form_input.id_for_label}}_comment-dialog" class="fr-modal" role="dialog" >
+        <div class="fr-container fr-container--fluid fr-container-md">
+            <div class="fr-grid-row fr-grid-row--center">
+                <div class="fr-col-12 fr-col-md-8 fr-col-lg-6">
+                    <div class="fr-modal__body">
+                        <div class="fr-modal__header">
+                            <button type="button" class="fr-link--close fr-link" aria-controls="{{form_input.id_for_label}}_comment-dialog">Fermer</button>
+                        </div>
+                        <div class="fr-modal__content">
+                            {% if label %}
+                                <h1 id="{{form_input.id_for_label}}_comment-title" class="fr-modal__title">
+                                    <span class="fr-fi-arrow-right-line fr-fi--lg"></span>
+                                    {{ label }}
+                                </h1>
+                            {% endif %}
+                            <textarea
+                                class="fr-input"
+                                aria-describedby="text-input-error-desc-error"
+                                type="text"
+                                id="{{form_input.id_for_label}}_comment-textarea"
+                                name="{{form_input.html_name}}_comment-textarea"
+                                rows="5">{% if object_field %}{{ comments|get_item:object_field }}{% endif %}</textarea>
+                        </div>
+                        <div class="fr-modal__footer">
+                            <ul class="fr-btns-group fr-btns-group--right fr-btns-group--inline-reverse fr-btns-group--inline-lg fr-btns-group--icon-left">
+                                <li>
+                                    <button id='{{form_input.id_for_label}}_comment-submit' type="button" class="fr-btn fr-fi-checkbox-line">
+                                        Commenter
+                                    </button>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</dialog>
-<script>
-    function send_comment(input_id, object, field) {
-        comment = document.getElementById(input_id+ '-textarea').value
-        csrf_token = document.getElementsByName('csrfmiddlewaretoken')[0].value
+    </dialog>
 
-        // request = new Request('/comments/', {
-        //     headers: {
-        //         'X-CSRFToken': csrf_token,
-        //         'Content-Type': 'application/json'
-        //     },
-        //     method: 'POST',
-        //     body: JSON.stringify({comment: comment})
-        // });
-        // fetch(request).then( response => {console.log(response.status)})
-
-        fetch('/comments/', {
-            method: 'post',
-            headers: {
-                'X-CSRFToken': csrf_token,
-                'Accept': 'application/json',
-                'Content-Type': 'application/json'
-            },
-            body: JSON.stringify({
-                comment: comment,
-                object : object,
-                field : field,
-                convention_uuid : '{{convention.uuid}}'
-            })
-        }).then(function(response) {
-            if (response.status == 200) {
-                return response.json();
+    {% if object_field not in comments %}
+        <script>
+            document.getElementById('{{form_input.id_for_label}}_div').onmouseover = function() {
+                document.getElementById('{{form_input.id_for_label}}_comment').hidden=false
             }
-        }).then(res => console.log(res));
+            document.getElementById('{{form_input.id_for_label}}_div').onmouseleave = function(){
+                document.getElementById('{{form_input.id_for_label}}_comment').hidden=true
+            }
+        </script>
+    {% endif %}
+    <script>
+        document.getElementById('{{form_input.id_for_label}}_comment-submit').onclick = function() {
+            send_command('{{form_input.id_for_label}}_comment', '{{object_field}}')
+        }
 
 
 
-        document.getElementById(input_id + '-img').setAttribute('data-fr-opened',false)
-    }
+        function send_command(input_id, object_field) {
+            console.log('object_field')
+            console.log(object_field)
+            var [object_name, object_field] = object_field.split('__')
+            comment = document.getElementById(input_id+ '-textarea').value
+            csrf_token = document.getElementsByName('csrfmiddlewaretoken')[0].value
 
-</script>
+            fetch('/comments/', {
+                method: 'post',
+                headers: {
+                    'X-CSRFToken': csrf_token,
+                    'Accept': 'application/json',
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({
+                    comment: comment,
+                    object : object_name,
+                    field : object_field,
+                    convention_uuid : '{{convention.uuid}}'
+                })
+            }).then(function(response) {
+                if (response.status == 200) {
+                    return response.json();
+                }
+            }).then(res => console.log(res));
+
+            // Close the dialogbox
+            document.getElementById(input_id + '-img').setAttribute('data-fr-opened',false)
+        }
+    </script>
+{% endif %}
