--- a/templates/common/form/input_text.html
+++ b/templates/common/form/input_text.html
@@ -23,7 +23,7 @@
                     data-fr-opened="false"
                     aria-controls="{{form_input.id_for_label}}_comment-dialog">
                     <svg role="img" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" aria-labelledby="chatIconTitle">
-                        <title id="chatIconTitle">{{ comments|get_item:object_field }}</title>
+                        <title id="chatIconTitle">{% for comment in comments|get_item:object_field%}{{ comment.message }}{% endfor %}</title>
                         <path d="M8.82388455,18.5880577 L4,21 L4.65322944,16.4273939 C3.00629211,15.0013 2,13.0946628 2,11 C2,6.581722 6.4771525,3 12,3 C17.5228475,3 22,6.581722 22,11 C22,15.418278 17.5228475,19 12,19 C10.8897425,19 9.82174472,18.8552518 8.82388455,18.5880577 Z"></path>
                     </svg>
                 </div>
@@ -46,25 +46,41 @@
                         <div class="fr-modal__header">
                             <button type="button" class="fr-link--close fr-link" aria-controls="{{form_input.id_for_label}}_comment-dialog">Fermer</button>
                         </div>
-                        <div class="fr-modal__content">
+                        <div class="fr-modal__content fr-mb-1w">
                             {% if label %}
-                                <h1 id="{{form_input.id_for_label}}_comment-title" class="fr-modal__title">
+                                <h3 id="{{form_input.id_for_label}}_comment-title" class="fr-modal__title">
                                     <span class="fr-fi-arrow-right-line fr-fi--lg"></span>
                                     {{ label }}
-                                </h1>
+                                </h3>
                             {% endif %}
+                            {% for comment in comments|get_item:object_field%}
+                                <div class='fr-mt-3w'><b>{{ comment.user }} :</b></div>
+                                <div class='fr-text-sm'><i>le {{ comment.mis_a_jour_le }}</i></div>
+                                <textarea
+                                    class="fr-input"
+                                    aria-describedby="text-input-error-desc-error"
+                                    type="text"
+                                    disabled
+                                    rows="5">{{ comment.message }}</textarea>
+                                <ul class="fr-mt-1w fr-btns-group fr-btns-group--right fr-btns-group--inline-reverse fr-btns-group--inline-lg fr-btns-group--icon-left">
+                                    <li>
+                                        <button id='{{form_input.id_for_label}}_comment-submit' type="button" class="fr-btn fr-btn--sm">
+                                            Marquer comme résolu
+                                        </button>
+                                    </li>
+                                </ul>
+                            {% endfor %}
+                            <div class='fr-mt-3w fr-mb-1w'><b>Ajouter un commentaire :</b></div>
                             <textarea
                                 class="fr-input"
                                 aria-describedby="text-input-error-desc-error"
                                 type="text"
                                 id="{{form_input.id_for_label}}_comment-textarea"
                                 name="{{form_input.html_name}}_comment-textarea"
-                                rows="5">{% if object_field %}{{ comments|get_item:object_field }}{% endif %}</textarea>
-                        </div>
-                        <div class="fr-modal__footer">
-                            <ul class="fr-btns-group fr-btns-group--right fr-btns-group--inline-reverse fr-btns-group--inline-lg fr-btns-group--icon-left">
+                                rows="5">{{ comment.message }}</textarea>
+                            <ul class="fr-mt-1w fr-btns-group fr-btns-group--right fr-btns-group--inline-reverse fr-btns-group--inline-lg fr-btns-group--icon-left">
                                 <li>
-                                    <button id='{{form_input.id_for_label}}_comment-submit' type="button" class="fr-btn fr-fi-checkbox-line">
+                                    <button id='{{form_input.id_for_label}}_comment-submit' type="button" class="fr-btn fr-btn--sm">
                                         Commenter
                                     </button>
                                 </li>
@@ -115,6 +131,7 @@
                 })
             }).then(function(response) {
                 if (response.status == 200) {
+                    location.reload();
                     return response.json();
                 }
             }).then(res => console.log(res));
