--- a/templates/common/form/input_text.html
+++ b/templates/common/form/input_text.html
@@ -46,45 +46,74 @@
                         <div class="fr-modal__header">
                             <button type="button" class="fr-link--close fr-link" aria-controls="{{form_input.id_for_label}}_comment-dialog">Fermer</button>
                         </div>
-                        <div class="fr-modal__content fr-mb-1w">
+                        <div class="fr-modal__content fr-mb-1w" id="{{form_input.id_for_label}}_modal_comment">
                             {% if label %}
                                 <h3 id="{{form_input.id_for_label}}_comment-title" class="fr-modal__title">
                                     <span class="fr-fi-arrow-right-line fr-fi--lg"></span>
                                     {{ label }}
                                 </h3>
                             {% endif %}
-                            {% for comment in comments|get_item:object_field%}
-                                <div class='fr-mt-3w'><b>{{ comment.user }} :</b></div>
-                                <div class='fr-text-sm'><i>le {{ comment.mis_a_jour_le }}</i></div>
+                            {% for comment in comments|get_item:object_field %}
+                                <div class='fr-mt-3w text-bold'>{{ comment.user }}{% if comment.user.id == request.user.id %} (vous){% endif %} :</div>
+                                <div class='fr-text-sm text-italic'>le {{ comment.mis_a_jour_le }}</div>
+                                <input type="hidden" value="{{comment.uuid}}"/>
                                 <textarea
                                     class="fr-input"
                                     aria-describedby="text-input-error-desc-error"
                                     type="text"
-                                    disabled
+                                    id="comment_{{comment.uuid}}"
+                                    {% if comment.user.id != request.user.id %}disabled{% endif %}
                                     rows="5">{{ comment.message }}</textarea>
-                                <ul class="fr-mt-1w fr-btns-group fr-btns-group--right fr-btns-group--inline-reverse fr-btns-group--inline-lg fr-btns-group--icon-left">
-                                    <li>
-                                        <button id='{{form_input.id_for_label}}_comment-submit' type="button" class="fr-btn fr-btn--sm">
+                                <ul class="fr-mt-1w fr-btns-group fr-btns-group--right fr-btns-group--inline-reverse fr-btns-group--inline-lg fr-btns-group--icon-left fr-btns-group--sm">
+                                    <li id='block_comment_close_{{comment.uuid}}'>
+                                        <button id='comment_close_{{comment.uuid}}' type="button" class="fr-btn fr-btn--sm fr-btn--grey">
+                                            Marquer comme clos
+                                        </button>
+                                    </li>
+                                    <li id='block_comment_resolve_{{comment.uuid}}'>
+                                        <button id='comment_resolve_{{comment.uuid}}' type="button" class="fr-btn fr-btn--sm fr-btn--green">
                                             Marquer comme résolu
                                         </button>
                                     </li>
+                                    <li id='block_comment_reopen_{{comment.uuid}}'>
+                                        <button id='comment_reopen_{{comment.uuid}}' type="button" class="fr-btn fr-btn--sm">
+                                            Ré-ouvrir
+                                        </button>
+                                    </li>
+                                    <li id='block_comment_save_{{comment.uuid}}'>
+                                        <button id='comment_save_{{comment.uuid}}' type="button" class="fr-btn fr-btn--sm">
+                                            Enregistrer
+                                        </button>
+                                    </li>
                                 </ul>
+                                <script>
+                                    init_comment_button('{{comment.uuid}}', '{{comment.statut}}', 'True', '{{comment.user.is_instructeur}}')
+                                </script>
                             {% endfor %}
-                            <div class='fr-mt-3w fr-mb-1w'><b>Ajouter un commentaire :</b></div>
-                            <textarea
-                                class="fr-input"
-                                aria-describedby="text-input-error-desc-error"
-                                type="text"
-                                id="{{form_input.id_for_label}}_comment-textarea"
-                                name="{{form_input.html_name}}_comment-textarea"
-                                rows="5">{{ comment.message }}</textarea>
-                            <ul class="fr-mt-1w fr-btns-group fr-btns-group--right fr-btns-group--inline-reverse fr-btns-group--inline-lg fr-btns-group--icon-left">
-                                <li>
-                                    <button id='{{form_input.id_for_label}}_comment-submit' type="button" class="fr-btn fr-btn--sm">
-                                        Commenter
-                                    </button>
-                                </li>
-                            </ul>
+                            {% if not comments|get_item:object_field|has_own_comment:request.user.id %}
+                                <div id="{{form_input.id_for_label}}_new_comment">
+                                    <div class='fr-mt-3w fr-mb-1w'><b>Ajouter un commentaire :</b></div>
+                                    <textarea
+                                        class="fr-input"
+                                        aria-describedby="text-input-error-desc-error"
+                                        type="text"
+                                        id="{{form_input.id_for_label}}_comment-textarea"
+                                        name="{{form_input.html_name}}_comment-textarea"
+                                        rows="5">{{ comment.message }}</textarea>
+                                    <ul class="fr-mt-1w fr-btns-group fr-btns-group--right fr-btns-group--inline-reverse fr-btns-group--inline-lg fr-btns-group--icon-left fr-btns-group--sm">
+                                        <li>
+                                            <button id='{{form_input.id_for_label}}_comment-submit' type="button" class="fr-btn fr-btn--sm">
+                                                Ajouter un commentaire
+                                            </button>
+                                        </li>
+                                    </ul>
+                                    <script>
+                                        document.getElementById('{{form_input.id_for_label}}_comment-submit').onclick = function() {
+                                            create_comment('{{form_input.id_for_label}}', '{{object_field}}')
+                                        }
+                                    </script>
+                                </div>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
@@ -102,42 +131,6 @@
             }
         </script>
     {% endif %}
-    <script>
-        document.getElementById('{{form_input.id_for_label}}_comment-submit').onclick = function() {
-            send_command('{{form_input.id_for_label}}_comment', '{{object_field}}')
-        }
 
 
-
-        function send_command(input_id, object_field) {
-            console.log('object_field')
-            console.log(object_field)
-            var [object_name, object_field] = object_field.split('__')
-            comment = document.getElementById(input_id+ '-textarea').value
-            csrf_token = document.getElementsByName('csrfmiddlewaretoken')[0].value
-
-            fetch('/comments/', {
-                method: 'post',
-                headers: {
-                    'X-CSRFToken': csrf_token,
-                    'Accept': 'application/json',
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({
-                    comment: comment,
-                    object : object_name,
-                    field : object_field,
-                    convention_uuid : '{{convention.uuid}}'
-                })
-            }).then(function(response) {
-                if (response.status == 200) {
-                    location.reload();
-                    return response.json();
-                }
-            }).then(res => console.log(res));
-
-            // Close the dialogbox
-            document.getElementById(input_id + '-img').setAttribute('data-fr-opened',false)
-        }
-    </script>
 {% endif %}
