--- a/templates/conventions/bailleur.html
+++ b/templates/conventions/bailleur.html
@@ -1,6 +1,198 @@
 {% extends "layout/base.html" %}
 
 {% block page_title %}Bailleur - APiLos{% endblock%}
+{% block javascript_extras %}
+    <script>
+        function create_comment(input_id, object_field) {
+            var [object_name, object_field] = object_field.split('__')
+            comment = document.getElementById(input_id+ '_comment-textarea').value
+            csrf_token = document.getElementsByName('csrfmiddlewaretoken')[0].value
+
+            var headers = {
+                'X-CSRFToken': csrf_token,
+                'Accept': 'application/json',
+                'Content-Type': 'application/json'
+            }
+
+            fetch('/comments/', {
+                method: 'post',
+                headers: headers,
+                body: JSON.stringify({
+                    comment: comment,
+                    object : object_name,
+                    field : object_field,
+                    convention_uuid : '{{convention.uuid}}'
+                })
+            }).then(function(response) {
+                if (response.status == 200) {
+                    res = response.json()
+                    return res;
+                }
+            }).then(res => {
+                create_comment_input(input_id, res.comment)
+                console.log(res)
+            });
+
+            // Close the dialogbox
+            //document.getElementById(input_id + '_comment-img').setAttribute('data-fr-opened',false)
+        }
+
+        function create_comment_input(input_id, comment) {
+            var before_id = input_id + "_new_comment"
+            var comment_modal_id = input_id + "_modal_comment"
+            new_comment_block = document.getElementById(before_id)
+            new_comment_block.hidden = true
+            const owner_div = create_comment_owner(comment.username, comment.is_owner);
+            document.getElementById(comment_modal_id).insertBefore( owner_div, new_comment_block );
+            const date_div = create_comment_date(comment.mis_a_jour_le);
+            document.getElementById(comment_modal_id).insertBefore( date_div, new_comment_block );
+            const uuid_div = create_comment_uuid(comment.uuid);
+            document.getElementById(comment_modal_id).insertBefore( uuid_div, new_comment_block );
+            const textarea_div = create_comment_textarea(comment.uuid, comment.message);
+            document.getElementById(comment_modal_id).insertBefore( textarea_div, new_comment_block );
+        }
+
+        //<div class="fr-mt-3w"><b>Raphaëlle Neyton (vous) :</b></div>
+        function create_comment_owner(username, is_owner) {
+            const owner_div = document.createElement('div');
+            owner_div.classList.add('fr-mt-3w')
+            owner_div.classList.add('text-bold')
+            inner_text = username
+            if (is_owner && is_owner != 'False') {
+                inner_text = inner_text + " (vous)"
+            }
+            owner_div.innerText = inner_text + " :"
+            return owner_div
+        }
+
+        //<div class="fr-text-sm text-italic"><i>le 3 novembre 2021 12:06</i></div>
+        function create_comment_date(date) {
+            const date_div = document.createElement('div');
+            date_div.classList.add('fr-text-sm')
+            date_div.classList.add('text-italic')
+            date_div.innerText = "le " + date
+            return date_div
+        }
+
+        //<input type="hidden" value="fb7d6bf9-291a-4b3d-b2a6-25fea7e20dcb">
+        function create_comment_uuid(uuid) {
+            const uuid_div = document.createElement('input');
+            uuid_div.setAttribute('type', "hidden")
+            uuid_div.value = uuid
+            return uuid_div
+        }
+
+        //<textarea class="fr-input" aria-describedby="text-input-error-desc-error" type="text" id="comment_fb7d6bf9-291a-4b3d-b2a6-25fea7e20dcb" rows="5">tt</textarea>
+        function create_comment_textarea(uuid, message) {
+            const textarea_div = document.createElement('textarea');
+            textarea_div.classList.add('fr-input')
+            textarea_div.setAttribute('aria-describedby', "text-input-error-desc-error")
+            textarea_div.setAttribute('type', "text")
+            textarea_div.setAttribute('id', "comment_" + uuid)
+            textarea_div.setAttribute('rows', "5")
+            textarea_div.innerText = message
+            return textarea_div
+        }
+
+        // <ul class="fr-mt-1w fr-btns-group fr-btns-group--right fr-btns-group--inline-reverse fr-btns-group--inline-lg fr-btns-group--icon-left fr-btns-group--sm">
+        //     <li id="block_comment_close_96c201c0-c0ce-4400-9b73-09803961e6a1" class="button-hidden">
+        //         <button id="comment_close_96c201c0-c0ce-4400-9b73-09803961e6a1" type="button" class="fr-btn fr-btn--sm fr-btn--grey">
+        //             Marquer comme clos
+        //         </button>
+        //     </li>
+        //     <li id="block_comment_resolve_96c201c0-c0ce-4400-9b73-09803961e6a1">
+        //         <button id="comment_resolve_96c201c0-c0ce-4400-9b73-09803961e6a1" type="button" class="fr-btn fr-btn--sm fr-btn--green">
+        //             Marquer comme résolu
+        //         </button>
+        //     </li>
+        //     <li id="block_comment_reopen_96c201c0-c0ce-4400-9b73-09803961e6a1" class="button-hidden">
+        //         <button id="comment_reopen_96c201c0-c0ce-4400-9b73-09803961e6a1" type="button" class="fr-btn fr-btn--sm">
+        //             Ré-ouvrir
+        //         </button>
+        //     </li>
+        //     <li id="block_comment_save_96c201c0-c0ce-4400-9b73-09803961e6a1">
+        //         <button id="comment_save_96c201c0-c0ce-4400-9b73-09803961e6a1" type="button" class="fr-btn fr-btn--sm">
+        //             Enregistrer
+        //         </button>
+        //     </li>
+        // </ul>
+
+        function create_comment_button(uuid, message) {
+        }
+
+        function save_comment(uuid) {
+            message = document.getElementById("comment_" + uuid).value
+            csrf_token = document.getElementsByName('csrfmiddlewaretoken')[0].value
+
+            var headers = {
+                'X-CSRFToken': csrf_token,
+                'Accept': 'application/json',
+                'Content-Type': 'application/json'
+            }
+
+            fetch('/comments/' + uuid, {
+                method: 'post',
+                headers: headers,
+                body: JSON.stringify({
+                    message: message
+                })
+            }).then(function(response) {
+                if (response.status == 200) {
+                    return response.json();
+                }
+            }).then(res => console.log(res));
+
+        }
+
+        function init_comment_button(uuid, comment_statut, is_owner, is_instructeur) {
+
+            // button 'Marquer comme clos'
+            if (is_instructeur == 'True' && comment_statut != 'CLOS') {
+                document.getElementById('block_comment_close_' + uuid).classList.remove('button-hidden')
+            }
+            else {
+                document.getElementById('block_comment_close_' + uuid).classList.add('button-hidden')
+            }
+            document.getElementById('comment_close_' + uuid).onclick = function() {
+                alert('CLOS ' + uuid)
+            }
+
+            // button 'Marquer comme résolu'
+            if (comment_statut == 'OUVERT') {
+                document.getElementById('block_comment_resolve_' + uuid).classList.remove('button-hidden')
+            }
+            else {
+                document.getElementById('block_comment_resolve_' + uuid).classList.add('button-hidden')
+            }
+            document.getElementById('comment_resolve_' + uuid).onclick = function() {
+                alert('RESOLU ' + uuid)
+            }
+
+            // button 'Ré-ouvrir'
+            if (comment_statut == 'RESOLU') {
+                document.getElementById('block_comment_reopen_' + uuid).classList.remove('button-hidden')
+            }
+            else {
+                document.getElementById('block_comment_reopen_' + uuid).classList.add('button-hidden')
+            }
+            document.getElementById('comment_reopen_' + uuid).onclick = function() {
+                alert('REOPEN ' + uuid)
+            }
+
+            // button 'Enregistrer'
+            if (comment_statut == 'OUVERT' && is_owner == 'True') {
+                document.getElementById('block_comment_save_' + uuid).classList.remove('button-hidden')
+            }
+            else {
+                document.getElementById('block_comment_save_' + uuid).classList.add('button-hidden')
+            }
+            document.getElementById('comment_save_' + uuid).onclick = function() {
+                save_comment(uuid)
+            }
+        }
+
+    </script>
+{% endblock %}
 
 {% block content %}
     <div class="fr-container-fluid ds_banner">
