--- a/templates/common/form/input_text.html
+++ b/templates/common/form/input_text.html
@@ -53,73 +53,49 @@
                                     {{ label }}
                                 </h3>
                             {% endif %}
-                            {% for comment in comments|get_item:object_field %}
-                                <div class='fr-mt-3w text-bold'>{{ comment.user }}{% if comment.user.id == request.user.id %} (vous){% endif %} :</div>
-                                <div class='fr-text-sm text-italic'>le {{ comment.mis_a_jour_le }}</div>
-                                <input type="hidden" value="{{comment.uuid}}"/>
+                            <div id="{{form_input.id_for_label}}_new_comment">
+                                <div class='fr-mt-3w fr-mb-1w'><b>Ajouter un commentaire :</b></div>
                                 <textarea
                                     class="fr-input"
                                     aria-describedby="text-input-error-desc-error"
                                     type="text"
-                                    id="comment_{{comment.uuid}}"
-                                    {% if comment.user.id != request.user.id %}disabled{% endif %}
+                                    id="{{form_input.id_for_label}}_comment-textarea"
+                                    name="{{form_input.html_name}}_comment-textarea"
                                     rows="5">{{ comment.message }}</textarea>
                                 <ul class="fr-mt-1w fr-btns-group fr-btns-group--right fr-btns-group--inline-reverse fr-btns-group--inline-lg fr-btns-group--icon-left fr-btns-group--sm">
-                                    <li id='block_comment_close_{{comment.uuid}}'>
-                                        <button id='comment_close_{{comment.uuid}}' type="button" class="fr-btn fr-btn--sm fr-btn--grey">
-                                            Marquer comme clos
-                                        </button>
-                                    </li>
-                                    <li id='block_comment_resolve_{{comment.uuid}}'>
-                                        <button id='comment_resolve_{{comment.uuid}}' type="button" class="fr-btn fr-btn--sm fr-btn--green">
-                                            Marquer comme résolu
-                                        </button>
-                                    </li>
-                                    <li id='block_comment_reopen_{{comment.uuid}}'>
-                                        <button id='comment_reopen_{{comment.uuid}}' type="button" class="fr-btn fr-btn--sm">
-                                            Ré-ouvrir
-                                        </button>
-                                    </li>
-                                    <li id='block_comment_save_{{comment.uuid}}'>
-                                        <button id='comment_save_{{comment.uuid}}' type="button" class="fr-btn fr-btn--sm">
-                                            Enregistrer
+                                    <li>
+                                        <button id='{{form_input.id_for_label}}_comment-submit' type="button" class="fr-btn fr-btn--sm">
+                                            Ajouter un commentaire
                                         </button>
                                     </li>
                                 </ul>
                                 <script>
-                                    init_comment_button('{{comment.uuid}}', '{{comment.statut}}', 'True', '{{comment.user.is_instructeur}}')
+                                    document.getElementById('{{form_input.id_for_label}}_comment-submit').onclick = function() {
+                                        create_comment('{{form_input.id_for_label}}', '{{object_field}}')
+                                    }
                                 </script>
-                            {% endfor %}
-                            {% if not comments|get_item:object_field|has_own_comment:request.user.id %}
-                                <div id="{{form_input.id_for_label}}_new_comment">
-                                    <div class='fr-mt-3w fr-mb-1w'><b>Ajouter un commentaire :</b></div>
-                                    <textarea
-                                        class="fr-input"
-                                        aria-describedby="text-input-error-desc-error"
-                                        type="text"
-                                        id="{{form_input.id_for_label}}_comment-textarea"
-                                        name="{{form_input.html_name}}_comment-textarea"
-                                        rows="5">{{ comment.message }}</textarea>
-                                    <ul class="fr-mt-1w fr-btns-group fr-btns-group--right fr-btns-group--inline-reverse fr-btns-group--inline-lg fr-btns-group--icon-left fr-btns-group--sm">
-                                        <li>
-                                            <button id='{{form_input.id_for_label}}_comment-submit' type="button" class="fr-btn fr-btn--sm">
-                                                Ajouter un commentaire
-                                            </button>
-                                        </li>
-                                    </ul>
-                                    <script>
-                                        document.getElementById('{{form_input.id_for_label}}_comment-submit').onclick = function() {
-                                            create_comment('{{form_input.id_for_label}}', '{{object_field}}')
-                                        }
-                                    </script>
-                                </div>
-                            {% endif %}
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </dialog>
+
+    {% for comment in comments|get_item:object_field %}
+
+        <script>
+            create_comment_input('{{form_input.id_for_label}}',{
+                username: '{{comment.user}}',
+                is_owner: '{% if comment.user_id == request.user.id %}True{% else %}False{% endif %}',
+                mis_a_jour_le: '{{comment.mis_a_jour_le}}',
+                uuid: '{{comment.uuid}}',
+                message: '{{comment.message}}',
+                statut: '{{comment.statut}}',
+            }, '{{ comments|get_item:object_field|has_own_comment:request.user.id }}');
+        </script>
+
+    {% endfor %}
 
     {% if object_field not in comments %}
         <script>
