--- a/templates/common/form/input_text.html
+++ b/templates/common/form/input_text.html
@@ -37,67 +37,5 @@
     {% endfor %}
 </div>
 
-{% if object_field %}
-    <dialog aria-labelledby="{{form_input.id_for_label}}_comment-title" id="{{form_input.id_for_label}}_comment-dialog" class="fr-modal" role="dialog" >
-        <div class="fr-container fr-container--fluid fr-container-md">
-            <div class="fr-grid-row fr-grid-row--center">
-                <div class="fr-col-12 fr-col-md-8 fr-col-lg-6">
-                    <div class="fr-modal__body">
-                        <div class="fr-modal__header">
-                            <button type="button" class="fr-link--close fr-link" aria-controls="{{form_input.id_for_label}}_comment-dialog">Fermer</button>
-                        </div>
-                        <div class="fr-modal__content fr-mb-1w" id="{{form_input.id_for_label}}_modal_comment">
-                            {% if label %}
-                                <h3 id="{{form_input.id_for_label}}_comment-title" class="fr-modal__title">
-                                    <span class="fr-fi-arrow-right-line fr-fi--lg"></span>
-                                    {{ label }}
-                                </h3>
-                            {% endif %}
-                            <div id="{{form_input.id_for_label}}_new_comment">
-                                <div class='fr-mt-3w fr-mb-1w'><b>Ajouter un commentaire :</b></div>
-                                <textarea
-                                    class="fr-input"
-                                    aria-describedby="text-input-error-desc-error"
-                                    type="text"
-                                    id="{{form_input.id_for_label}}_comment-textarea"
-                                    name="{{form_input.html_name}}_comment-textarea"
-                                    rows="5"></textarea>
-                                <ul class="fr-mt-1w fr-btns-group fr-btns-group--right fr-btns-group--inline-reverse fr-btns-group--inline-lg fr-btns-group--icon-left fr-btns-group--sm">
-                                    <li>
-                                        <button id='{{form_input.id_for_label}}_comment-submit' type="button" class="fr-btn fr-btn--sm">
-                                            Ajouter un commentaire
-                                        </button>
-                                    </li>
-                                </ul>
-                                <script>
-                                    document.getElementById('{{form_input.id_for_label}}_comment-submit').onclick = function() {
-                                        create_comment('{{form_input.id_for_label}}', '{{object_field}}')
-                                    }
-                                </script>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </dialog>
+{% include "common/comment_dialog.html" with form_input=form_input convention=convention object_field=object_field comments=comments %}
 
-    {% for comment in comments|get_item:object_field %}
-        <script>
-            create_comment_input('{{form_input.id_for_label}}',{
-                username: '{{comment.user}}',
-                is_owner: '{% if comment.user_id == request.user.id %}True{% else %}False{% endif %}',
-                mis_a_jour_le: '{{comment.mis_a_jour_le}}',
-                uuid: '{{comment.uuid}}',
-                message: '{{comment.message}}',
-                statut: '{{comment.statut}}',
-            }, '{{ comments|get_item:object_field|has_own_active_comment:request.user.id }}');
-        </script>
-    {% endfor %}
-
-    <script>
-        display_comment_icon('{{form_input.id_for_label}}', {% if object_field in comments %}true{% else %}false{% endif %})
-    </script>
-
-
-{% endif %}
