--- a/templates/common/form/input_upload.html
+++ b/templates/common/form/input_upload.html
@@ -41,7 +41,7 @@
                     <img class="apilos-fi-btn fr-mr-1w" src="{% static "icons/upload.svg" %}" ></img>Téléverser une image
                 </button>
 
-                <script nonce="{{request.csp_nonce}}">
+                <script type="text/javascript" nonce="{{request.csp_nonce}}">
                     document.addEventListener('DOMContentLoaded', function () {
                         document.getElementById('{{form_input_files.id_for_label}}_dz_button')
                             .addEventListener('click', function(){ document.getElementById('{{form_input_files.id_for_label}}_dropzone').click() });
