--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -31,7 +31,7 @@
         {% block javascript_extras %}{% endblock %}
         {% if ENVIRONMENT == 'production' %}
             <!-- Matomo -->
-            <script nonce="{{request.csp_nonce}}">
+            <script type="text/javascript" nonce="{{request.csp_nonce}}">
                 var _paq = window._paq = window._paq || [];
                 /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
                 _paq.push(['trackPageView']);
