create all comment input type

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -136,6 +136,10 @@ textarea.fr-input:disabled, textarea.fr-input[disabled] {
   justify-content: stretch;
 }
 
+.block--row-strech-1 {
+  flex:1
+}
+
 .day-and-month {
   width: 85px;
 }
