--- a/templates/common/form/input_textarea.html
+++ b/templates/common/form/input_textarea.html
@@ -1,15 +1,25 @@
-<textarea
-    class="fr-input {% if form_input.errors %}fr-input--error{% endif %}"
-    aria-describedby="text-input-error-desc-error"
-    type="text"
-    id="{{form_input.id_for_label}}"
-    name="{{form_input.html_name}}"
-    rows="{% if rows %}{{rows}}{% else %}3{% endif %}"
-    {% if not editable %}disabled{% endif %}>
-    {{ form_input.value|default_if_none:'' }}
-</textarea>
-{% for error in form_input.errors %}
-    <p id="text-input-error-desc-error" class="fr-error-text">
-        {{ error }}
-    </p>
-{% endfor %}
+<div class="fr-input-group {% if form_input.errors %}fr-select-group--error{% endif %}">
+    {% if label %}
+        <label class="fr-label" for="{{form_input.id_for_label}}">
+            {{ label }}
+        </label>
+    {% endif %}
+    <div class="fr-mt-1w block--row-strech" id="{{form_input.id_for_label}}_div">
+        <textarea
+            class="fr-input {% if form_input.errors %}fr-input--error{% endif %}"
+            aria-describedby="text-input-error-desc-error"
+            type="text"
+            id="{{form_input.id_for_label}}"
+            name="{{form_input.html_name}}"
+            rows="{% if rows %}{{rows}}{% else %}3{% endif %}"
+            {% if not editable %}disabled{% endif %}>{{ form_input.value|default_if_none:'' }}</textarea>
+        {% for error in form_input.errors %}
+            <p id="text-input-error-desc-error" class="fr-error-text">
+                {{ error }}
+            </p>
+        {% endfor %}
+        {% include "common/comment_icon.html" with form_input=form_input object_field=object_field comments=comments %}
+    </div>
+</div>
+
+{% include "common/comment_dialog.html" with form_input=form_input convention=convention object_field=object_field comments=comments %}
