--- a/templates/conventions/bailleur.html
+++ b/templates/conventions/bailleur.html
@@ -1,7 +1,9 @@
 {% extends "layout/base.html" %}
 
 {% load static %}
+
 {% block page_title %}Bailleur - APiLos{% endblock%}
+
 {% block javascript_extras %}
     <script src="{% static "js/comment-block.js" %}" nonce="{{request.csp_nonce}}"></script>
 {% endblock %}
@@ -19,42 +21,42 @@
 
                         <h4>Entreprise bailleur</h4>
 
-                        {% include "common/form/input_text.html" with form_input=form.nom label="Nom du bailleur" object_field="programme__nom" %}
+                        {% include "common/form/input_text.html" with form_input=form.nom label="Nom du bailleur" object_field="bailleur__nom" %}
                         <div class="fr-mb-2w">
                             <div class="fr-grid-row fr-grid-row--gutters">
                                 <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
-                                    {% include "common/form/input_text.html" with form_input=form.siret label="SIRET ou SIREN" object_field="programme__siret" %}
+                                    {% include "common/form/input_text.html" with form_input=form.siret label="SIRET ou SIREN" object_field="bailleur__siret" %}
                                 </div>
                                 <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-pl-md-1w fr-mb-2w">
-                                    {% include "common/form/input_number.html" with step="0.01" form_input=form.capital_social label="Capital social" mandatory=False %}
+                                    {% include "common/form/input_number.html" with step="0.01" form_input=form.capital_social label="Capital social" mandatory=False object_field="bailleur__capital_social" %}
                                 </div>
                             </div>
                         </div>
 
-                        {% include "common/form/input_text.html" with form_input=form.adresse label="Adresse" object_field="programme__adresse" %}
+                        {% include "common/form/input_text.html" with form_input=form.adresse label="Adresse" object_field="bailleur__adresse" %}
 
                         <div class="fr-mb-2w">
                             <div class="fr-grid-row fr-grid-row--gutters">
                                 <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
-                                    {% include "common/form/input_text.html" with form_input=form.code_postal label="Code postal" %}
+                                    {% include "common/form/input_text.html" with form_input=form.code_postal label="Code postal" object_field="bailleur__code_postal" %}
                                 </div>
                                 <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-pl-md-1w fr-mb-2w">
-                                    {% include "common/form/input_text.html" with form_input=form.ville label="Ville" %}
+                                    {% include "common/form/input_text.html" with form_input=form.ville label="Ville" object_field="bailleur__ville" %}
                                 </div>
                             </div>
                         </div>
 
                         <h4>Signataire de la convention</h4>
 
-                        {% include "common/form/input_text.html" with form_input=form.dg_nom label="Nom du signataire de la convention" %}
+                        {% include "common/form/input_text.html" with form_input=form.dg_nom label="Nom du signataire de la convention" object_field="bailleur__dg_nom" %}
 
                         <div class="fr-mb-2w">
                             <div class="fr-grid-row fr-grid-row--gutters">
                                 <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
-                                    {% include "common/form/input_text.html" with form_input=form.dg_fonction label="Fonction du signataire de la convention" %}
+                                    {% include "common/form/input_text.html" with form_input=form.dg_fonction label="Fonction du signataire de la convention" object_field="bailleur__dg_fonction" %}
                                 </div>
                                 <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-pl-md-1w fr-mb-2w">
-                                    {% include "common/form/input_date.html" with form_input=form.dg_date_deliberation label="Date de délibération" %}
+                                    {% include "common/form/input_date.html" with form_input=form.dg_date_deliberation label="Date de délibération" object_field="bailleur__dg_date_deliberation" %}
                                 </div>
                             </div>
                         </div>
